--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geocoding: ^2.1.0
   geolocator: ^10.1.0
+  webview_flutter: ^2.0.9
   
 
 dev_dependencies:
